--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beastz Vault</title>
+    <title>Vault</title>
+    <link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
+    <!-- <link rel="manifest" href="./src/assets/favicon/site.webmanifest" /> -->
+
+    <!-- Icons -->
+    <link rel="shortcut icon" href="./src/assets/favicon/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./src/assets/favicon/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="./src/assets/favicon/android-chrome-512x512.png"
+    />
+    <link rel="apple-touch-icon" href="./src/assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png" />
   </head>
   <body class="bp5-dark">
     <div id="root"></div>
